--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.surovcevnv.tradeandwarehouse">
+    package="com.surovcevnv.tawactions">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".main.MainActivity"
+            android:name="com.surovcevnv.tawactions.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".comings.ComingActivity"></activity>
-        <activity android:name=".remains.RemainsActivity"></activity>
-        <activity android:name=".expenses.ExpenseActivity"></activity>
-        <activity android:name=".actions.ActionsActivity"></activity>
-        <activity android:name=".actions.SprActionsActivity"></activity>
+        <activity android:name="com.surovcevnv.tawactions.comings.ComingActivity"></activity>
+        <activity android:name="com.surovcevnv.tawactions.remains.RemainsActivity"></activity>
+        <activity android:name="com.surovcevnv.tawactions.expenses.ExpenseActivity"></activity>
+        <activity android:name="com.surovcevnv.tawactions.actions.ActionsActivity"></activity>
+        <activity android:name="com.surovcevnv.tawactions.actions.SprActionsActivity"></activity>
     </application>
 
 </manifest>
